(executables
 (names solver compression helmholtz geomDrawLambdaString geomDrawFile
   geomTest logoTest logoDrawString logoSequenceString protonet_tester client
   versionDemo)
 (modes native)
 (ocamlopt_flags :standard -O3 -unboxed-types -nodynlink -w -20)
 (libraries core re2 yojson geomLib logoLib ocaml-protoc zmq core_kernel.pairing_heap)  ;parmap
 (preprocess
  (pps  ppx_jane))
 (promote (until-clean))
)
